hphp/test/quick/yield_return.php.expectf

Fatal error: Cannot mix 'return' and 'yield' in the same function in %s on line 7
